--- a/style.css
+++ b/style.css
@@ -1,17 +1,24 @@
 *{
 	margin: 0;
 	padding: 0;
-	font-family: Arial, Helvetica, sans-serif;
-	color: #d9d9d9;
+	color: var(--first-color-darken);
 	box-sizing: border-box;
 	font-family: 'Poppins', sans-serif;
 }
+:root{
+	/*===== Colors =====*/
+	--first-color: #facece;
+	--first-color-dark: #FCA4A6;
+	--first-color-darken: #A83E51;
+	--white-color: #FCF8F8;
+  }
 body{
 	height: 100vh;
 	width: 100%;
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	background: linear-gradient(to right,var(--first-color), var(--first-color));
 }
 .main{
 	position: relative;
@@ -20,7 +27,9 @@ body{
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	background: linear-gradient(to right, #5D6D7E, #566573);
+	background: linear-gradient(to right,var(--first-color-dark), var(--first-color-dark));
+	border-radius: 15px;
+	box-shadow: 3px 4px 5px var(--first-color), var(--first-color);
 }
 .main button{
 	padding:  0.7320644216691069vw  0.8784773060029283vw;
@@ -31,7 +40,7 @@ body{
 	top: 0.7320644216691069vw;
 	left: 2.1961932650073206vw;
 	font-size: 1.8301610541727673vw;
-	color: #ccc;
+	color: var(--first-color);
 }
 .main #logo i{
 	margin-right: 1.0980966325036603vw;
@@ -53,7 +62,7 @@ body{
 	height: 21.961932650073205vw;
 	width: 80%;
 	border-radius: 1.0980966325036603vw;
-	box-shadow: 0.1529051987767584vw 0vw 3.058103975535168vw 1.834862385321101vw rgba(240,240,240,0.2);
+	box-shadow: 0.1529051987767584vw 0vw 3.058103975535168vw 1.834862385321101vw var(--first-color);
 }
 
 /* both range slider part */
@@ -68,7 +77,7 @@ input[type="range"]::-webkit-slider-thumb{
 	-webkit-appearance: none;
 	height:  3.058103975535168vw;
 	width:  3.058103975535168vw;
-	background: #FF8A65;
+	background: #A83E51;
 	border-radius: 50%;
 	cursor: pointer;
 }
@@ -88,7 +97,7 @@ input[type="range"]::-webkit-slider-thumb{
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	color: #fff;
+	color: var(--first-color);
 }
 .left .volume p{
 	font-size: 15px;
@@ -96,10 +105,10 @@ input[type="range"]::-webkit-slider-thumb{
 .left .volume i{
 	cursor: pointer;
 	padding: 8px 12px;
-	background: #FF8A65;
+	background: var(--first-color);
 }
 .left .volume i:hover{
-	background: rgba(245,245,245,0.1);
+	background: var(--first-color-dark);
 }
 .volume #volume_show{
 	padding: 8px 12px;
@@ -127,7 +136,7 @@ input[type="range"]::-webkit-slider-thumb{
 	cursor: pointer;
 	outline: none;
 	transition: 0.5s;
-	background: rgba(255,255,255,0.1);
+	background: rgba(153, 49, 49, 0.1);
 }
 .right #title{
 	position: absolute;
@@ -216,7 +225,7 @@ input[type="range"]::-webkit-slider-thumb{
 	bottom: 0;
 	padding: 1.0980966325036603vw;
 	font-size: 0.98rem;
-	background: linear-gradient(to right, #5D6D7E, #566573);
+	background: linear-gradient(to right, var(--first-color-dark), var(--first-color-dark));
   }
   .faisal center span{
 	color: #ccc;
@@ -226,7 +235,7 @@ input[type="range"]::-webkit-slider-thumb{
 	text-decoration: none;
   }
   .faisal center a:hover{
-	text-decoration: underline;
+	text-decoration: none;
   }
  
 	footer{
@@ -242,4 +251,3 @@ input[type="range"]::-webkit-slider-thumb{
 	  margin: 100.36603221083455345vw 0;
 	  
 	}
-  }
