--- a/style.css
+++ b/style.css
@@ -23,12 +23,12 @@ body{
 .main{
 	position: relative;
 	height: 80%;
-	width: 80%;
+	width: 85%;
 	display: flex;
 	align-items: center;
 	justify-content: center;
 	background: linear-gradient(to right,var(--first-color-dark), var(--first-color-dark));
-	border-radius: 15px;
+	border-radius: 10px;
 	box-shadow: 3px 4px 5px var(--first-color), var(--first-color);
 }
 .main button{
@@ -250,4 +250,156 @@ input[type="range"]::-webkit-slider-thumb{
 	.main-content .box{
 	  margin: 100.36603221083455345vw 0;
 	  
+	}
+	/*-----media Quaries----------*/
+
+
+	/*-----Desktops & Laptops----------*/
+
+	
+	/*-----Tablets & iPads----------*/
+	@media only screen and (min-device-width : 400px) and (max-device-width : 768px) {
+			.main button{
+				padding:  0.7320644216691069vw  0.8784773060029283vw;
+				margin: 0 1.7320644216691069vw;
+			}
+			.main #logo{
+				position: absolute;
+				top: 20px;
+				left: 10px;
+				font-size: 20px
+			}
+	/* song image */
+	.left img{
+		height: 30.961932650073205vw;
+		width: 100%;
+		margin-left: 10px;
+	}
+  .right .middle i{
+	  margin: 2000px;
+  }
+	
+	/* both range slider part */
+	input[type="range"] {
+		-webkit-appearance: none;
+		width: 200px;
+		outline: none;
+		height: 0.3058103975535168vw;
+		margin: 0 1.0980966325036603vw;
+		margin-top: -60px;
+	}
+	input[type="range"]::-webkit-slider-thumb{
+		-webkit-appearance: none;
+		height:  3.058103975535168vw;
+		width:  3.058103975535168vw;
+		background: var(--first-color-darken);
+	}
+	.right input[type=range]{
+		width: 500px;
+		margin-top: -80px;
+	}
+	.volume{
+		margin-left: 30px;
+	}
+	.volume #volume_show{
+		padding: 8px 12px;
+		margin: -10px 0px 50px 0;
+	}
+	.volume i{
+		padding: 82px 12px;
+		margin: -10px -10px 50px 0;
+	}
+	
+	.right .middle button{
+		border: none;
+		height:  5.124450951683748vw;
+		width:  5.124450951683748vw;
+		border-radius: 50%;	
+	}
+	.right i{
+		border: none;
+		margin-bottom: auto;
+	}
+	.right #title{
+		top:  9.392386530014641vw;
+		left: 8%;
+		font-size: 17px;
+	}
+	.right #artist{
+		top: 17.052708638360176vw;
+		left: 8%;
+		font-size: 13px;
+	}
+		}
+
+
+	/*-----Mobile Phone----------*/
+
+	@media (max-width: 420px) {
+		.main{
+			margin-top: -30px;
+			display: flex;
+		}
+		.main button{
+			padding:  0.7320644216691069vw  0.8784773060029283vw;
+			margin: 0 1.7320644216691069vw;
+		}
+		.main #logo{
+			position: absolute;
+			top: 20px;
+			left: 10px;
+			font-size: 20px
+		}
+/* song image */
+.left img{
+	height: 30.961932650073205vw;
+	width: 100%;
+	margin-left: 10px;
+}
+
+/* both range slider part */
+input[type="range"] {
+	-webkit-appearance: none;
+	width: 200px;
+	outline: none;
+	height: 0.3058103975535168vw;
+	margin: 0 0 60px 15px;
+
+}
+
+.right input[type=range]{
+	width: 500px;
+	margin-top: -80px;
+}
+.volume{
+	margin-left: 40px;
+}
+.volume #volume_show{
+	padding: 8px 12px;
+	margin: -10px 0px 50px 0;
+}
+.volume i{
+	padding: 82px 12px;
+	margin: -10px -10px 50px 0;
+}
+.right #title{
+	top:  30.392386530014641vw;
+	left: 8%;
+	font-size: 17px;
+}
+.right #artist{
+	top: 40.052708638360176vw;
+	left: 8%;
+	font-size: 13px;
+}
+.right #auto{
+	font-size: 15px;
+	cursor: pointer;
+	margin-top: 3.294289897510981vw;
+}
+.right i:before{
+	font-size: 2.4641288433382138vw;
+	align-items: center;
+}
+	
 	}
